--- a/css/styles.css
+++ b/css/styles.css
@@ -144,6 +144,32 @@ h3 {
   opacity: 0;
   pointer-events: none;
 }
+.modal-button{
+  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  background-color:#ffffff;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 0px;
+  right: 0px;;
+}
+
+
+.modal-button::after{
+  content: '';
+  display: block;
+  height: 25px;
+  width: 25px;
+  background-image: url('../images/vector.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 11px;
+  
+  
+}
 
 .fixed-header{
   position: fixed;
